--- a/partials/users-albums.html
+++ b/partials/users-albums.html
@@ -1,13 +1,16 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-10">
-      <!--Body content-->
-      <ul class="albums">
-        <li ng-repeat="album in albums " class="thumbnail">
-          <p>{{album.id}}</p>
-        </li>
-      </ul>
-
-    </div>
-  </div>
+   	<div class="col-md-10" >
+				  	 <div class="row">
+											      <ul class="albums">
+											        <li ng-repeat="cc in albums | orderBy:cc.id" class="thumbnail">
+											        	<span>
+											        		<a href="#/missing/{{cc.id}}">{{cc.name}}</a>
+											        	</span>
+											        </li>
+											      </ul>
+						 </div>
+					  </div>
+					</div>
 </div>
+
