--- a/partials/user-add.html
+++ b/partials/user-add.html
@@ -3,7 +3,7 @@
 	    <form class="form_phone" name="formPhone">
 	    	<div class="col-lg-4 col-md-3">
 	    		<!-- Username -->
-	      		<input type="text" ng-model="userEmail" class="form-control"  placeholder="email " ng-required="true"/>
+	      		<input type="text" ng-model="userEmail" class="form-control"  placeholder="username" ng-required="true"/>
 	      		<input type="text" ng-model="userPassword" class="form-control" placeholder="password" ng-required="true"/>
 	      		<input type="text" ng-model="userConfirmPassword" class="form-control" placeholder="confirm password" ng-required="true"/>
           	<button type="button" class="btn btn-default" ng-click="formPhone.$valid && addUser()">Create Account</button>          	
