--- a/partials/user-logIn.html
+++ b/partials/user-logIn.html
@@ -4,7 +4,7 @@
 	    	<div class="col-lg-4 col-md-3">
 	    		<!-- Username -->
 	    		
-	      		<input type="text" ng-model="userEmail" class="form-control"  placeholder="email " ng-required="true"/>
+	      		<input type="text" ng-model="userEmail" class="form-control"  placeholder="username " ng-required="true"/>
 	      		<input type="text" ng-model="userPassword" class="form-control" placeholder="password" ng-required="true"/>
 	      		
           	<button class="btn btn-default " ng-click="formPhone.$valid && logInUser()">SigIn</button>
