--- a/partials/home.html
+++ b/partials/home.html
@@ -1,5 +1,11 @@
-<div >
-	<h1>Missing Cards!</h1>
-	
-	<p>{{ message }}</p>
-</div>
+<div class="container-fluid">
+  <nav class="navbar">
+    <div class="container">
+    	<ul class="nav navbar-nav navbar-right" >
+    	{{userLogIn}}
+     </ul>
+    </div>
+  </nav>
+  {{message}}
+ </div>
+  
