--- a/partials/users-albums.html
+++ b/partials/users-albums.html
@@ -5,7 +5,8 @@
     	{{userLogIn}}
      </ul>
     </div>
-  </nav>	
+  </nav>
+  <p>Elenco album di {{userLogIn}}</p>		
   <div class="row">
    	<div class="col-md-10" >
 				  	 <div class="row">
