--- a/partials/users-album-card.html
+++ b/partials/users-album-card.html
@@ -12,11 +12,13 @@
 	   	<div class="col-md-10" >
 					  	 <div class="row">
 												      <ul class="cards">
+												      		<div ng-show={{owner}}>
 													      	<span >
 		     														<input type="text"  ng-model="card"            class="form-control"  placeholder="n. missing cards"  ng-required="true"/>
 		     														<input type="text"  ng-model="textdescription"  class="form-control"  placeholder="dsdsdsdescription"  />
 		     														<button  class="btn btn-default"  ng-click="formPhone.$valid && addMissingCard(card, textdescription)" >Add missing card</button>
 		     													</span>
+		     												</div>
 													        <li ng-repeat="cc in cards | orderBy:'cc.card':reverse track by $index" class="thumbnail" >
 													        		{{$index}}
 	 													        	<button type="button" class="btn btn-danger btn-sm" ng-model="id" ng-click="removeMissingCard(cc.id)" ng-show={{owner}} >remove</button>
