--- a/partials/users-albums.html
+++ b/partials/users-albums.html
@@ -6,11 +6,13 @@
      </ul>
     </div>
   </nav>
-  <p>Elenco album di {{userLogIn}}</p>		
   <div class="row">
    	<div class="col-md-10" >
 				  	 <div class="row">
 											      <ul class="albums">
+											      	<li class="thumbnail">
+											      		<span class="label label-pill label-warning" >Albums for {{userown}}</span>
+											      	</li>
 											        <li ng-repeat="cc in albums | orderBy:cc.id" class="thumbnail">
 											        	<span>
 											        		<a href="#/missing/{{cc.id}}">{{cc.name}}</a>
