--- a/partials/albums-list.html
+++ b/partials/albums-list.html
@@ -14,7 +14,7 @@
 					<span class="label label-pill label-warning" >Albums</span>
 				</li>
         <li ng-repeat="album in albums | filter:query | orderBy:orderProp" class="thumbnail">
-        <span><a href="#/missing/{{album.id}}">{{album.name}}</a></span><span class="label label-pill label-success">{{album.userown.email}}</span>
+        <span><a href="#/usersalbums/{{album.userown.id}}">{{album.name}}</a></span><span class="label label-pill label-success">{{album.userown.email}}</span>
         </li>
       </ul>
 		</div>
