--- a/partials/albums-list.html
+++ b/partials/albums-list.html
@@ -6,7 +6,18 @@
      </ul>
     </div>
   </nav>
-
+  <div class="row">
+		<div class="col-md-10">
+     	<ul class="albums">
+     		<li class="thumbnail">
+					<span class="label label-pill label-warning" >search</span>
+					<input type="text"  ng-model="ncard"  class="form-control"  placeholder="card number"  /> </br>
+						<button  class="btn btn-default"  ng-click="searchMissingCard(ncard)" >search</button>
+					</span>					
+				</li>
+      </ul>
+		</div>
+  </div>
   <div class="row">
 		<div class="col-md-10">
      	<ul class="albums">
