--- a/partials/albums-list.html
+++ b/partials/albums-list.html
@@ -11,9 +11,8 @@
      	<ul class="albums">
      		<li class="thumbnail">
 					<span class="label label-pill label-warning" >search</span>
-					<input type="text"  ng-model="ncard"  class="form-control"  placeholder="card number"  /> </br>
+					<input type="text"  ng-model="ncard"  class="form-control"  placeholder="card number"  /> 
 						<button  class="btn btn-default"  ng-click="searchMissingCard(ncard)" >search</button>
-					</span>					
 				</li>
       </ul>
 		</div>
